<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWordActivity">

    <EditText
        android:id="@+id/sourceTxt"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/back"
        android:hint="@string/gadaadUg" />

    <EditText
        android:id="@+id/targetTxt"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/sourceTxt"
        android:layout_centerHorizontal="true"
        android:background="@drawable/back"
        android:layout_marginTop="50dp"
        android:hint="@string/mongolUg" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/targetTxt"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="0dp"
            android:text="@string/insert" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="0dp"
            android:text="@string/cancel" />
    </LinearLayout>

</RelativeLayout>